@@ -763,7 +763,8 @@ literal:
 }
 
 char *
-strptime (const char *buf, const char *fmt, struct tm *tm)
+strptime (const char *__restrict buf, const char *__restrict fmt,
+	  struct tm *__restrict tm)
 {
   era_info_t *era_info = NULL;
   alt_digits_t *alt_digits = NULL;
